--- a/pages/19686.html
+++ b/pages/19686.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      diagonal matrix in nLab
+      permutation matrix in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      diagonal matrix
+      permutation matrix
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8981/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -526,19 +526,35 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
-<p>A square <a class="existingWikiWord" href="/nlab/show/matrix">matrix</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>A</mi> <mrow><mi>x</mi><mo>,</mo><mi>y</mi></mrow></msub><mo stretchy="false">)</mo><mo>∈</mo><msub><mi>Mat</mi> <mrow><mi>n</mi><mo>×</mo><mi>n</mi></mrow></msub><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(A_{x,y})\in Mat_{n \times n}(R)</annotation></semantics></math> whose values for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>≠</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x\neq y</annotation></semantics></math> are all <a class="existingWikiWord" href="/nlab/show/zero">zero</a> is called a <em>diagonal matrix</em>.</p>
+<p>A square <a class="existingWikiWord" href="/nlab/show/matrix">matrix</a> is called a <em>permutation matrix</em> if every row (equivalently: every column) has all entries 0 except for precisely one entry, which has value 1 (a special case of <a class="existingWikiWord" href="/nlab/show/monomial+matrices">monomial matrices</a>).</p>
 
-<h2 id="properties">Properties</h2>
-
-<p>Diagonal matrices form the <a class="existingWikiWord" href="/nlab/show/center">center</a> of the ring of matrices under <a class="existingWikiWord" href="/nlab/show/matrix+multiplication">matrix multiplication</a>.</p>
+<p>Permutation matrices represent <a class="existingWikiWord" href="/nlab/show/linear+permutation+representations">linear permutation representations</a> in their canonical <a class="existingWikiWord" href="/nlab/show/linear+basis">linear basis</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/permutation+matrix">permutation matrix</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/permutation">permutation</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/triangular+matrix">triangular matrix</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/diagonal+matrix">diagonal matrix</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/inverse+matrix">inverse matrix</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/binary+linear+code">binary linear code</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -546,7 +562,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Diagonal_matrix">Diagonal matrices</a></em></li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Permutation_matrix">Permutation matrix</a></em></li>
 </ul>
 </body></html>
 
@@ -554,22 +570,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 13, 2018 at 04:06:04.
-  See the <a href="https://ncatlab.org/nlab/history/diagonal matrix" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 13, 2018 at 04:30:29.
+  See the <a href="https://ncatlab.org/nlab/history/permutation matrix" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/diagonal+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/diagonal+matrix/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/diagonal+matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/diagonal+matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/diagonal matrix/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/permutation+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/permutation matrix/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/diagonal+matrix" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/permutation+matrix" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/diagonal+matrix" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/permutation+matrix" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/diagonal+matrix" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/permutation+matrix" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
