--- a/pages/3485.html
+++ b/pages/3485.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3206/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3206/#Item_19" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -725,7 +725,7 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>the number of <a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a> of <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> equals the number of <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> of <em><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic</a></em> <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a>;</p>
+<p>the number of <a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a> of <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> equals the number of <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> of <em><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic]2]_ [[subgroups</a>;</em></p>
 </li>
 
 <li>
@@ -739,6 +739,103 @@ margin-left: 0em;
 </div>
 
 <p>A more general analysis of the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> is due to <a href="#Berz94">Berz 94</a>, reviewed and expanded on in <a href="#HambletonTaylor99">Hambleton-Taylor 99</a>. See also <a href="#BartelDokchitser14">Bartel-Dokchitser 14, p. 1</a>.</p>
+
+<div class="num_example" id="VirtualPermutationRepresentationsOfZ2">
+<h6 id="example_2">Example</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/virtual+permutation+representations">virtual permutation representations</a> of the <a class="existingWikiWord" href="/nlab/show/group+of+order+2">group of order 2</a></strong></p>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">G = \mathbb{Z}/2</annotation></semantics></math> be the <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic</a> <a class="existingWikiWord" href="/nlab/show/group+of+order+2">group of order 2</a>.</p>
+
+<p>It has two <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a>,</p>
+
+<ol>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">H =\mathbb{Z}/2</annotation></semantics></math> the group itself,</p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">H = 1</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/trivial+group">trivial group</a>;</p>
+</li>
+</ol>
+
+<p>and hence two <a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a> of <a class="existingWikiWord" href="/nlab/show/transitive+action">transitive</a> <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a></p>
+
+<ol>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo>=</mo><mo>*</mo></mrow><annotation encoding="application/x-tex">(\mathbb{Z}/2)/(\mathbb{Z}/2) = \ast</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/point">point</a> with the <a class="existingWikiWord" href="/nlab/show/trivial+action">trivial action</a>,</p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mn>1</mn><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">(\mathbb{Z}/2)/1 = \mathbb{Z}/2</annotation></semantics></math> the group itself, with the <a class="existingWikiWord" href="/nlab/show/regular+action">regular action</a>.</p>
+</li>
+</ol>
+
+<p>The corresponding linear permutation representations (Def. <a class="maruku-ref" href="#LinearPermutationRepresentation"></a>) are</p>
+
+<ol>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo stretchy="false">[</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">]</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mstyle mathvariant="bold"><mn>1</mn></mstyle></mrow><annotation encoding="application/x-tex">k[ (\mathbb{Z}/2)/(\mathbb{Z}/2)] \;\simeq\; \mathbf{1} </annotation></semantics></math>,</p>
+
+<p>the 1-dimensional <a class="existingWikiWord" href="/nlab/show/trivial+representation">trivial representation</a>;</p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo stretchy="false">[</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mn>1</mn><mo stretchy="false">]</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mstyle mathvariant="bold"><mn>1</mn></mstyle><mo>⊕</mo><msub><mstyle mathvariant="bold"><mn>1</mn></mstyle> <mi>alt</mi></msub></mrow><annotation encoding="application/x-tex">k[ (\mathbb{Z}/2)/1 ] \; \simeq\; \mathbf{1} \oplus \mathbf{1}_{alt}</annotation></semantics></math>,</p>
+
+<p>the <a class="existingWikiWord" href="/nlab/show/direct+sum">direct sum</a> of the 1d <a class="existingWikiWord" href="/nlab/show/trivial+representation">trivial representation</a> with the <a class="existingWikiWord" href="/nlab/show/alternating+representation">alternating representation</a>.</p>
+</li>
+</ol>
+
+<p>To see the second item, observe that the non-trivial element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi><mo>∈</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\sigma \in \mathbb{Z}/2</annotation></semantics></math> is represented on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo stretchy="false">[</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">]</mo><mo>≃</mo><mo stretchy="false">⟨</mo><mi>e</mi><mo>,</mo><mi>σ</mi><mo stretchy="false">⟩</mo></mrow><annotation encoding="application/x-tex">k[\mathbb{Z}/2] \simeq \langle e,\sigma\rangle</annotation></semantics></math> by the <a class="existingWikiWord" href="/nlab/show/permutation+matrix">permutation matrix</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>(</mo><mrow><mtable><mtr><mtd><mn>0</mn></mtd> <mtd><mn>1</mn></mtd></mtr> <mtr><mtd><mn>1</mn></mtd> <mtd><mn>0</mn></mtd></mtr></mtable></mrow><mo>)</mo></mrow><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
+  \left(
+    \array{
+      0 &amp; 1
+      \\
+      1 &amp; 0
+    }
+  \right)
+  \,,
+
+</annotation></semantics></math></div>
+<p>which is <a class="existingWikiWord" href="/nlab/show/diagonal+matrix">diagonalizable</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>=</mo><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">k = \mathbb{Z}</annotation></semantics></math> with <a class="existingWikiWord" href="/nlab/show/eigenvectors">eigenvectors</a></p>
+
+<ol>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>[</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd></mtr> <mtr><mtd><mn>1</mn></mtd></mtr></mtable></mrow><mo>]</mo></mrow></mrow><annotation encoding="application/x-tex">\left[\array{ 1 \\ 1 }\right]</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/eigenvalue">eigenvalue</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>1</mn></mrow><annotation encoding="application/x-tex">1</annotation></semantics></math>, <a class="existingWikiWord" href="/nlab/show/linear+span">spanning</a> the <a class="existingWikiWord" href="/nlab/show/trivial+representation">trivial representation</a> of dimension 1;</p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>[</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd></mtr> <mtr><mtd><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mtd></mtr></mtable></mrow><mo>]</mo></mrow></mrow><annotation encoding="application/x-tex">\left[\array{ 1 \\ -1 }\right]</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/eigenvalue">eigenvalue</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">-1</annotation></semantics></math>, <a class="existingWikiWord" href="/nlab/show/linear+span">spanning</a> the <a class="existingWikiWord" href="/nlab/show/alternating+representation">alternating representation</a> of dimension 1.</p>
+</li>
+</ol>
+
+<p>Hence, the <a class="existingWikiWord" href="/nlab/show/abelian+group">abelian group</a> underlying the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> may be identified with the <a class="existingWikiWord" href="/nlab/show/linear+span">linear span</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><msub><mo>≃</mo> <mi>k</mi></msub><mspace width="thickmathspace"></mspace><mo stretchy="false">⟨</mo><mstyle mathvariant="bold"><mn>1</mn></mstyle><mo>,</mo><msub><mstyle mathvariant="bold"><mn>1</mn></mstyle> <mi>alt</mi></msub><mo stretchy="false">⟩</mo></mrow><annotation encoding="application/x-tex">
+  R(\mathbb{Z}/2) \;\simeq_k\; \langle \mathbf{1}, \mathbf{1}_{alt}  \rangle
+
+</annotation></semantics></math></div>
+<p>and the comparison morphism from the <a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> (Def. <a class="maruku-ref" href="#ComparisonMapBurnsideRingRepresentationRing"></a>) is</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>A</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><mphantom><mi>AA</mi></mphantom><mi>β</mi><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd> <mtd><mi>R</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd><mn>1</mn><mspace width="thinmathspace"></mspace><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>−</mo><mspace width="thickmathspace"></mspace><mn>0</mn><mspace width="thinmathspace"></mspace><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo></mtd> <mtd><mo>↦</mo></mtd> <mtd><mstyle mathvariant="bold"><mn>1</mn></mstyle></mtd></mtr> <mtr><mtd><mn>1</mn><mspace width="thinmathspace"></mspace><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mn>1</mn><mspace width="thickmathspace"></mspace><mo>−</mo><mspace width="thickmathspace"></mspace><mn>1</mn><mspace width="thinmathspace"></mspace><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo stretchy="false">)</mo></mtd> <mtd><mo>↦</mo></mtd> <mtd><msub><mstyle mathvariant="bold"><mn>1</mn></mstyle> <mi>alt</mi></msub><mspace width="thinmathspace"></mspace><mo>,</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+    A(\mathbb{Z}/2)
+    &amp;\overset{ \phantom{AA} \beta \phantom{AA}}{\longrightarrow}&amp;
+    R(\mathbb{Z}/2)
+    \\
+    1\, (\mathbb{Z}/2)/(\mathbb{Z}/2) \;-\; 0\, (\mathbb{Z}/2)/(\mathbb{Z}/2) 
+      &amp;\mapsto&amp; 
+    \mathbf{1}
+    \\
+    1\, (\mathbb{Z}/2)/1 \;-\; 1\, (\mathbb{Z}/2)/(\mathbb{Z}/2)
+      &amp;\mapsto&amp;
+    \mathbf{1}_{alt}
+    \,,
+  }
+
+</annotation></semantics></math></div>
+<p>which is manifestly an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a>, in accord with Prop. <a class="maruku-ref" href="#WhenAllVirtualLinearRepsAreVirtualPermutationReps"></a>.</p>
+</div>
 
 <h2 id="related_entries">Related entries</h2>
 
@@ -831,7 +928,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 13, 2018 at 03:32:46.
+  Last revised on September 13, 2018 at 04:47:30.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
