--- a/pages/19686.html
+++ b/pages/19686.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8981/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8981/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -529,7 +529,7 @@ margin-left: 0em;
 <div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
-<p>A square <a class="existingWikiWord" href="/nlab/show/matrix">matrix</a> is called a <em>permutation matrix</em> if every row (equivalently: every column) has all entries 0 except for precisely one entry, which has value 1 (a special case of <a class="existingWikiWord" href="/nlab/show/monomial+matrices">monomial matrices</a>).</p>
+<p>A square <a class="existingWikiWord" href="/nlab/show/matrix">matrix</a> is called a <em>permutation matrix</em> if every row and every column has all entries 0 except for precisely one entry, which has value 1 (a special case of <a class="existingWikiWord" href="/nlab/show/monomial+matrices">monomial matrices</a>).</p>
 
 <p>Permutation matrices represent <a class="existingWikiWord" href="/nlab/show/linear+permutation+representations">linear permutation representations</a> in their canonical <a class="existingWikiWord" href="/nlab/show/linear+basis">linear basis</a>.</p>
 
@@ -570,14 +570,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 13, 2018 at 04:30:29.
+  Last revised on September 13, 2018 at 06:40:28.
   See the <a href="https://ncatlab.org/nlab/history/permutation matrix" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/permutation+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+matrix/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/permutation+matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation matrix/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
