--- a/pages/3485.html
+++ b/pages/3485.html
@@ -843,7 +843,7 @@ margin-left: 0em;
 <div class="num_example" id="VirtualPermuationRepresentationOfS4">
 <h6 id="example_3">Example</h6>
 
-<p><strong>(virtual permutation representation of <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">S_4</annotation></semantics></math>)</strong></p>
+<p><strong>(virtual permutation representations of <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">S_4</annotation></semantics></math>)</strong></p>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> on four elements, the comparison morphism from the <a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> to the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> (Def. <a class="maruku-ref" href="#ComparisonMapBurnsideRingRepresentationRing"></a>)</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><msub><mi>S</mi> <mn>4</mn></msub><mo stretchy="false">)</mo><mover><mo>⟶</mo><mi>β</mi></mover><mi>R</mi><mo stretchy="false">(</mo><msub><mi>S</mi> <mn>4</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
@@ -946,14 +946,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 13, 2018 at 05:52:30.
+  Last revised on September 13, 2018 at 06:23:07.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
