--- a/pages/17419.html
+++ b/pages/17419.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7096/#Item_19" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7096/#Item_20" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -506,7 +506,9 @@ margin-left: 0em;
 <div class="proof">
 <h6 id="proof">Proof</h6>
 
-<p>By <a class="existingWikiWord" href="/nlab/show/Schur%27s+lemma">Schur's lemma</a> see e.g. <a href="https://math.stackexchange.com/a/2503141/58526">here</a>.</p>
+<p>Over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> this follows by <a class="existingWikiWord" href="/nlab/show/Schur%27s+lemma">Schur's lemma</a> see e.g. <a href="https://math.stackexchange.com/a/2503141/58526">here</a>.</p>
+
+<p>For the general statement see for instance <a href="#Kowalski11">Kowalski 11, Prop. 2.3.17</a>.</p>
 </div>
 
 <div class="num_remark">
@@ -524,6 +526,10 @@ margin-left: 0em;
 <h2 id="references">References</h2>
 
 <ul>
+<li id="Kowalski11">
+<p>E. Kowalski, around p. 41 of <em>Representation theory</em>, 2011 (<a href="https://people.math.ethz.ch/~kowalski/representation-theory-notes.pdf">pdf</a>)</p>
+</li>
+
 <li id="Fein67">
 <p>Burton Fein, <em>Representations of direct products of finite groups</em>, Pacific J. Math. Volume 20, Number 1 (1967), 45-58 (<a href="https://projecteuclid.org/euclid.pjm/1102992967">Euclid:1102992967</a>) See also</p>
 </li>
@@ -538,14 +544,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 14:39:35.
+  Last revised on September 13, 2018 at 09:33:22.
   See the <a href="https://ncatlab.org/nlab/history/direct product group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/direct+product+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/direct+product+group/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/direct+product+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/direct+product+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/direct+product+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/direct+product+group/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/direct+product+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/direct+product+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/direct product group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
