--- a/pages/4956.html
+++ b/pages/4956.html
@@ -717,7 +717,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definitions">Definitions</a><ul><li><a href="#classical_analytic_definitions">Classical (analytic) definitions</a></li><li><a href="#AsAFunctor">Differentiation as a functor</a></li></ul></li><li><a href="#ExpositionDifferentiationViaInfinitesimal">Exposition of differentiation via infinitesimals</a><ul><li><a href="#setup">Setup</a></li><li><a href="#FunctionsAndForms">Functions and differential 1-forms</a></li><li><a href="#derivatives_as_infinitesimal_differences">Derivatives as infinitesimal differences</a></li><li><a href="#InfinitesimalDifferentiationAsAMapOfTangentBundles">As a map of tangent bundles</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definitions">Definitions</a><ul><li><a href="#classical_analytic_definitions">Classical (analytic) definitions</a></li><li><a href="#AsAFunctor">Differentiation as a functor</a></li></ul></li><li><a href="#ExpositionDifferentiationViaInfinitesimal">Exposition of differentiation via infinitesimals</a><ul><li><a href="#setup">Setup</a></li><li><a href="#FunctionsAndForms">Functions and differential 1-forms</a></li><li><a href="#derivatives_as_infinitesimal_differences">Derivatives as infinitesimal differences</a></li><li><a href="#InfinitesimalDifferentiationAsAMapOfTangentBundles">As a map of tangent bundles</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a><ul><li><a href="#general">General</a></li><li><a href="#history">History</a></li></ul></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p><em>Differentiation</em> is the process that assigns to a <a class="existingWikiWord" href="/nlab/show/function">function</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding="application/x-tex">f : X \to Y</annotation></semantics></math> its <em>derivative</em>, sometimes denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi><mi>f</mi></mrow><annotation encoding="application/x-tex">d f</annotation></semantics></math>. The derivative is a function that, roughly speaking, assigns to each point <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">x \in X</annotation></semantics></math> the linear transformation <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi><msub><mi>f</mi> <mi>x</mi></msub></mrow><annotation encoding="application/x-tex">d f_x</annotation></semantics></math> that maps <a class="existingWikiWord" href="/nlab/show/infinitesimal+space">infinitesimal</a> <a class="existingWikiWord" href="/nlab/show/differences">differences</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>y</mi><mo>−</mo><mi>x</mi></mrow><annotation encoding="application/x-tex">y - x</annotation></semantics></math> (for points <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>y</mi></mrow><annotation encoding="application/x-tex">y</annotation></semantics></math> infinitesimally close to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math>) to infinitesimal differences <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo><mo>−</mo><mi>f</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">f(y) - f(x)</annotation></semantics></math>.</p>
@@ -1065,22 +1065,32 @@ margin-left: 0em;
 </tbody></table>
 <h2 id="references">References</h2>
 
+<h3 id="general">General</h3>
+
 <p>The <a class="existingWikiWord" href="/nlab/show/Kock-Lawvere+axiom">Kock-Lawvere axiom</a> for the <a class="existingWikiWord" href="/nlab/show/axiom">axiomatization</a> of differentiation in <a class="existingWikiWord" href="/nlab/show/synthetic+differential+geometry">synthetic differential geometry</a> was introduced in</p>
 
 <ul>
 <li id="Kock77"><a class="existingWikiWord" href="/nlab/show/Anders+Kock">Anders Kock</a>, <em>A simple axiomatics for differentiation</em>, Mathematica Scandinavica Vol. 40, No. 2 (October 24, 1977), pp. 183-193 (<a href="http://www.jstor.org/stable/24491223">JSTOR</a>)</li>
 </ul>
 
-<p>Discussion of this history of the concept of differentiation, with emphasis on its roots all the way back in <a class="existingWikiWord" href="/nlab/show/Zeno%27s+paradoxes+of+motion">Zeno's paradoxes of motion</a> is in</p>
+<p>Another <a class="existingWikiWord" href="/nlab/show/synthetic+mathematics">synthetic</a> formalization of the chain rule in <a class="existingWikiWord" href="/nlab/show/differential+cohesion">differential</a> <a class="existingWikiWord" href="/nlab/show/cohesive+homotopy+type+theory">cohesive homotopy type theory</a> is given in</p>
 
 <ul>
-<li id="Boyer49">Carl Benjamin Boyer, <em>The history of the Calculus and its conceptual development</em>, Dover 1949</li>
+<li id="Wellen18"><a class="existingWikiWord" href="/nlab/show/Felix+Wellen">Felix Wellen</a>, section 3 of <em><a class="existingWikiWord" href="/schreiber/show/thesis+Wellen">Cartan Geometry in Modal Homotopy Type Theory</a></em> (<a href="https://arxiv.org/abs/1806.05966">arXiv:1806.05966</a>)</li>
 </ul>
 
 <p>Discussion of differential forms as functions on infinitesimal simplices is in</p>
 
 <ul>
 <li id="Stel13"><a class="existingWikiWord" href="/nlab/show/Herman+Stel">Herman Stel</a>, <em>Cosimplicial <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup></mrow><annotation encoding="application/x-tex">C^\infty</annotation></semantics></math> rings and the de Rham complex of Euclidean space</em> (<a href="http://arxiv.org/abs/1310.7407">arXiv:1310.7407</a>)</li>
+</ul>
+
+<h3 id="history">History</h3>
+
+<p>Discussion of the history of the concept of differentiation, with emphasis on its roots all the way back in <a class="existingWikiWord" href="/nlab/show/Zeno%27s+paradoxes+of+motion">Zeno's paradoxes of motion</a> is in</p>
+
+<ul>
+<li id="Boyer49">Carl Benjamin Boyer, <em>The history of the Calculus and its conceptual development</em>, Dover 1949</li>
 </ul>
 <div class="footnotes"><hr /><ol><li id="fn:1">
 <p>Without the continuity assumption on derivatives, the class of (once-)differentiable functions exhibits non-trivial <a class="existingWikiWord" href="/nlab/show/descriptive+set+theory">descriptive set-theoretic</a> complexity, as may be surmised by <a href="http://journals.cambridge.org/action/displayAbstract?fromPage=online&amp;aid=6984080">this paper</a> by Kechris and Woodin. Thus the continuity assumption eliminates troublesome pathologies. <a href="#fnref:1" rev="footnote">↩</a></p>
@@ -1092,14 +1102,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 13, 2018 at 14:51:40.
+  Last revised on September 14, 2018 at 13:11:34.
   See the <a href="https://ncatlab.org/nlab/history/differentiation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/differentiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/differentiation/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/differentiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/differentiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/differentiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/differentiation/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/differentiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/differentiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/differentiation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
