--- a/pages/2040.html
+++ b/pages/2040.html
@@ -821,10 +821,12 @@ margin-left: 0em;
 <li id="Barwick15">
 <p><a class="existingWikiWord" href="/nlab/show/Clark+Barwick">Clark Barwick</a>, <a class="existingWikiWord" href="/nlab/show/Saul+Glasman">Saul Glasman</a>, Jay Shah, <em>Spectral Mackey functors and equivariant algebraic K-theory (II)</em> (<a href="http://arxiv.org/abs/1505.03098">arXiv:1505.03098</a>)</p>
 </li>
+</ul>
 
-<li id="BohmannOsorno14">
-<p><a class="existingWikiWord" href="/nlab/show/Anna+Marie+Bohmann">Anna Marie Bohmann</a>, <a class="existingWikiWord" href="/nlab/show/Ang%C3%A9lica+Osorno">Angélica Osorno</a>, <em>Constructing equivariant spectra via categorical Mackey functors</em> (<a href="http://arxiv.org/abs/1405.6126">arXiv:1405.6126</a>)</p>
-</li>
+<p>The generalization of <span class="newWikiWord">K-theory of permutative categories<a href="/nlab/new/K-theory+of+permutative+categories">?</a></span> to spectral Mackey functors is discussed in</p>
+
+<ul>
+<li id="BohmannOsorno14"><a class="existingWikiWord" href="/nlab/show/Anna+Marie+Bohmann">Anna Marie Bohmann</a>, <a class="existingWikiWord" href="/nlab/show/Ang%C3%A9lica+Osorno">Angélica Osorno</a>, <em>Constructing equivariant spectra via categorical Mackey functors</em> (<a href="http://arxiv.org/abs/1405.6126">arXiv:1405.6126</a>)</li>
 </ul>
 
 <p>Lectures notes include</p>
@@ -839,10 +841,10 @@ margin-left: 0em;
 <li id="KahnYamazaki11"><a class="existingWikiWord" href="/nlab/show/Bruno+Kahn">Bruno Kahn</a>, Takao Yamazaki, <em>Voevodsky’s motives and Weil reciprocity</em>, Duke Mathematical Journal 162, 14 (2013) 2751-2796 (<a href="http://arxiv.org/abs/1108.2764">arXiv:1108.2764</a>)</li>
 </ul>
 
-<p>Categorification to Mackey 2-functors can be found in</p>
+<p><a class="existingWikiWord" href="/nlab/show/categorification">Categorification</a> to Mackey <a class="existingWikiWord" href="/nlab/show/2-functors">2-functors</a> is discussed found in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Paul+Balmer">Paul Balmer</a>, Ivo Dell’Ambrogio, <em>Mackey 2-functors and Mackey 2-motives</em>, (<a href="https://arxiv.org/abs/1808.04902">arXiv:1808.04902</a>)</li>
+<li><a class="existingWikiWord" href="/nlab/show/Paul+Balmer">Paul Balmer</a>, <a class="existingWikiWord" href="/nlab/show/Ivo+Dell%27Ambrogio">Ivo Dell'Ambrogio</a>, <em>Mackey 2-functors and Mackey 2-motives</em>, (<a href="https://arxiv.org/abs/1808.04902">arXiv:1808.04902</a>)</li>
 </ul>
 </body></html>
 
@@ -850,14 +852,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 14, 2018 at 08:52:37.
+  Last revised on September 14, 2018 at 13:58:36.
   See the <a href="https://ncatlab.org/nlab/history/Mackey functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Mackey functor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
