--- a/pages/3260.html
+++ b/pages/3260.html
@@ -962,6 +962,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Parametrized+Higher+Category+Theory+and+Higher+Algebra">Parametrized Higher Category Theory and Higher Algebra</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a>, <a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a></p>
+</li>
 </ul>
 
 <p>Equivariant homotopy theory is to <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> as <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a> is to <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a>.</p>
@@ -1036,14 +1040,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 11:32:16.
+  Last revised on September 14, 2018 at 14:37:28.
   See the <a href="https://ncatlab.org/nlab/history/equivariant homotopy theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+homotopy+theory/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/equivariant+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+homotopy+theory/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/equivariant+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant homotopy theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
