--- a/pages/8003.html
+++ b/pages/8003.html
@@ -839,20 +839,26 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Pierre+Guillot">Pierre Guillot</a>, <em>Adams operations in cohomotopy</em> (<a href="https://arxiv.org/abs/math/0612327">arXiv:0612327</a>)</p>
 </li>
 </ul>
+
+<p>The generalization of K-theory of permutative categories to <a class="existingWikiWord" href="/nlab/show/Mackey+functors">Mackey functors</a> is discussed in</p>
+
+<ul>
+<li id="BohmannOsorno14"><a class="existingWikiWord" href="/nlab/show/Anna+Marie+Bohmann">Anna Marie Bohmann</a>, <a class="existingWikiWord" href="/nlab/show/Ang%C3%A9lica+Osorno">Angélica Osorno</a>, <em>Constructing equivariant spectra via categorical Mackey functors</em>, Algebraic &amp; Geometric Topology 15.1 (2015): 537-563 (<a href="http://arxiv.org/abs/1405.6126">arXiv:1405.6126</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 06:35:42.
+  Last revised on September 14, 2018 at 14:13:49.
   See the <a href="https://ncatlab.org/nlab/history/K-theory of a permutative category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K-theory of a permutative category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
